# capptain-backend

./: .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  tox.ini  urls.py
.github/workflows/: tox.yml
capptain/: .dockerignore  admin.py  apps.py  model_mixins.py  models.py  serializers.py  settings.py  urls.py  views.py
capptain/migrations/: 0001_initial.py  0002_team.py  0003_teamplayers.py  0004_rename_teamplayers_teamplayer_alter_match_options.py  0005_match_joining_players_match_no_answer_players_and_more.py  0006_alter_match_team.py  0007_alter_match_joining_players_and_more.py
capptain/settings/: base.py  dev.py  prod.py
demo/: settings.py
settings/: base.py  dev.py
tests/: settings.py  test_my_app.py
