[tool.poetry]
name = "capptain"
version = "0.1.0"
description = "Capptain, the side-kick of our sport teams heroic captains"
license = "Unlicense"
authors = ["KoenCuijp <kghcuijpers@gmail.com>"]
maintainers = ["KoenCuijp <kghcuijpers@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KoenCuijp"
repository = "https://github.com/KoenCuijp/capptain-backend"
documentation = "https://github.com/KoenCuijp/capptain-backend/blob/master/README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "capptain" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2 || ^4.0 || ^5.0"
djangorestframework = "^3.13.0"
psycopg2-binary = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.masonry.api"
